// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`when end of year 1`] = `
<div>
  <svg>
    <g
      class="hand"
    >
      <circle
        cx="0"
        cy="0"
        r="22.8"
      />
      <line
        stroke-width="9.12"
        transform="rotate(359.99998859589044)"
        x1="0"
        x2="0"
        y1="0"
        y2="-456"
      />
    </g>
  </svg>
</div>
`;

exports[`when mid year 1`] = `
<div>
  <svg>
    <g
      class="hand"
    >
      <circle
        cx="0"
        cy="0"
        r="22.8"
      />
      <line
        stroke-width="9.12"
        transform="rotate(178.02739726591918)"
        x1="0"
        x2="0"
        y1="0"
        y2="-456"
      />
    </g>
  </svg>
</div>
`;

exports[`when start of year 1`] = `
<div>
  <svg>
    <g
      class="hand"
    >
      <circle
        cx="0"
        cy="0"
        r="22.8"
      />
      <line
        stroke-width="9.12"
        transform="rotate(0)"
        x1="0"
        x2="0"
        y1="0"
        y2="-456"
      />
    </g>
  </svg>
</div>
`;
